# WithUI

./: .gitignore  README.md  pyproject.toml  requirements.txt  todeletetest.py  todo.txt
demos/: bars_demo.py  buttons_demo.py  containers_demo.py  demo_layout.py  ext_demo.py  images_demo.py  menus_demo.py  testing_demo.py  texts_demo.py  themes_demo.py  windows_demo.py
docsmd/: docs.md  element.md  elements.md  ext.md  extra.md  navigation.md  settings.md  setup.md  status.md  themes.md
docsmd/elements/: button.md  checkbox.md  dropmenu.md  entryline.md  gif.md  hcont.md  image.md  label.md  line.md  progressbar.md  selectionlist.md  separator.md  slider.md  slideshow.md  vcont.md  window.md
src/: src_test.py
src/withui/: __init__.py  _bars.py  _base.py  _buttons.py  _constants.py  _containers.py  _ext.py  _images.py  _menus.py  _scrollbars.py  _separators.py  _texts.py  _windows.py  _withuibase.py  withui.py  withuiext.py
tests/: random_shit.py
